fix: navbar animation on small screens

--- a/src/app/css/theme.css
+++ b/src/app/css/theme.css
@@ -26,7 +26,6 @@
   --color-blueberry-900: oklch(0.18 0.06 263);
   --color-blueberry-950: oklch(0.13 0.03 264);
 
-  --spacing-content: min(100% - 2rem, var(--container-5xl));
   --container-navigation: 500px; /* Container threshold to switch to mobile navigation */
 
   @keyframes jumping-square {
